[package]
name = "port-scanner-rs"
version = "0.1.1"
edition = "2021"
authors = ["Morteza Shojaei <mshojaei179@gmail.com>"]
description = "A fast, concurrent port scanner with blockchain and web service detection"
repository = "https://github.com/morteza-shojaei/port-scanner"
license = "MIT"
keywords = ["network", "security", "port-scanner", "ethereum", "blockchain"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
thiserror = "1.0"
colored = "2.1"
trust-dns-resolver = "0.23"
ipnetwork = "0.20"
indicatif = "0.17.8"
